test/should-fail/vsgc1310Application.f3
/*
 * @subtest vsgc1310Applet
 */

public class vsgc1310Application {
    public var content: Component;
} 
